fix: Adjust colours for a11y contrast ratios

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ ul, li {
 	color: #333;
 }
 a {
-	color: orange;
+	color: #ff6000;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -100,7 +100,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #0769d0;
     text-decoration: none;
 }
 
@@ -122,7 +122,7 @@ nav h1 a {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  background-color: #3397DB;
+  background-color: #0769d0;
   align-items: center;
   justify-content: center;
   padding: 1rem;
@@ -183,7 +183,7 @@ nav h1 a {
   /*min-width: 100%;*/
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #d32a0f;
   font-family: Arial,sans-serif;
   font-size: 1rem;
   font-weight: 200;
@@ -202,7 +202,7 @@ nav h1 a {
   font-weight: bold;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #d32a0f;
   /*border-bottom: 3px solid #eee;*/
   color: #fff;
   display: inline-block;
@@ -256,7 +256,7 @@ nav h1 a {
   width: 100%;*/
 }
 #restaurant-name {
-  color: #f18200;
+  color: #d32a0f;
   font-family: Arial,sans-serif;
   font-size: 1.4rem;
   font-weight: 200;
@@ -294,7 +294,7 @@ nav h1 a {
 
 }*/
 #reviews-container h2 {
-  color: #f58500;
+  color: #d32a0f;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -343,7 +343,7 @@ nav h1 a {
 
 }
 .review-rating {
-  background-color: #f18200;
+  background-color: #d32a0f;
   color: #fff;
   margin: 0 1.5rem;
   padding: 0 0.5rem;
